add random cat gif

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ python-multipart = "^0.0.5"
 bilireq = "^0.1.2"
 emoji = "^1.7.0"
 wordcloud = "^1.8.1"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
